PMD: AvoidDeeplyNestedIfStmts